--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,16 @@ html {
 }
 
 .page {
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
+  justify-content: center;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  align-items: center;
 }
 
 h1,
@@ -35,4 +38,266 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  gap: 20px;
+  height: 534px;
+  align-items: flex-end
+
+}
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow-x:hidden;
+  overflow-y: auto;
+  height: 298px;
+}
+
+.search-form {
+  display: flex;
+  width: 711px;
+  height: 54px;
+ gap: 40px;
+}
+
+.content__details {
+  display: flex;
+  gap: 26px;
+  flex-direction: column;
+  width: 394px;
+  
+}
+
+.content__video-card-thumbnail {
+  width: 193px;
+  height: 103px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+
+
+}
+
+.result__video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+
+}
+
+li:not(:last-child) {
+  padding-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.content__video-card-description-container {
+  width: 100%;
+  height: 100%;
+}
+
+.search-form__fieldset-title {
+font-family: 'Fira Sans Condensed', sans-serif;
+font-weight: 400;
+font-size: 18px;
+color: #fff;
+}
+
+.title {
+  font-family:Oswald, sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  margin: 2px;
+  color: #fff;
+}
+
+.content__card-link_current {
+  background: #545050;
+
+}
+
+.content__video-card-title {
+font-family: Oswald,sans-serif;
+font-weight: 700;
+font-size: 30px;
+line-height: 100%;
+text-transform: uppercase;
+color: #fff;
+padding-bottom: 8px;
+}
+
+.content__video-card-description {
+  font-family: 'Fira Sans Condensed',sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 90%;
+  color: #fff;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+fieldset {
+  display: flex;
+  flex-direction: column;
+  border: 0;
+  
+}
+
+label {
+  width: fit-content;
+}
+
+input {
+  min-width: 225px;
+}
+.search-form__label {
+  display: flex;
+  outline: none;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+
+
+.search-form__textfield {
+  font-family:'Fira Sans Condensed',sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+  background-color: transparent;
+  border: 0;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  appearance: none;
+  outline: 0;
+
+}
+
+.search-form__checkbox +.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  block-size: 19px;
+  inline-size: 19px;
+  margin-right: 5px;
+  border: 1px solid #fff;
+}
+
+.search-form__label input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  background-color: #fff;
+  block-size: 15px;
+  inline-size: 15px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+ }
+
+.button {
+  border: 0;
+  background-color: transparent;
+  font-family:'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  margin-top: 20px;
+  width: 194px;
+  height: 34px;
+}
+
+.more-button {
+  width: 399px;
+  height: 34px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+}
+
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background: #545050;
+  text-decoration: none;
+}
+
+.button:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.more-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+.search-form__label:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.content__video-card:hover {
+  text-decoration: underline;
+  color: #fff;
+
+}
+
+.content__card-link:active {
+  background-color:#545050;
+  text-decoration: none;
 }
