--- a/styles/style.css
+++ b/styles/style.css
@@ -42,8 +42,7 @@ ol {
 
 .content {
   display: flex;
-  gap: 20px;
-  height: 534px;
+  gap: 30px;
   align-items: flex-end
 
 }
@@ -51,16 +50,14 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
-  overflow-x:hidden;
-  overflow-y: auto;
+  overflow: auto;
   height: 298px;
 }
 
 .search-form {
   display: flex;
   width: 711px;
-  height: 54px;
- gap: 40px;
+  gap: 40px;
 }
 
 .content__details {
@@ -73,6 +70,7 @@ ol {
 
 .content__video-card-thumbnail {
   width: 193px;
+
   height: 103px;
 }
 
@@ -136,6 +134,7 @@ color: #fff;
   text-decoration: none;
   margin: 2px;
   color: #fff;
+  text-decoration-skip-ink: none;
 }
 
 .content__card-link_current {
@@ -151,6 +150,9 @@ line-height: 100%;
 text-transform: uppercase;
 color: #fff;
 padding-bottom: 8px;
+text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
 }
 
 .content__video-card-description {
@@ -240,17 +242,18 @@ input {
   color: #fff;
   border: 1px solid #fff;
   cursor: pointer;
+  min-height: 34px;
 }
 
 .search-form__submit-button {
   margin-top: 20px;
-  width: 194px;
-  height: 34px;
+  min-width: 194px;
+  
 }
 
 .more-button {
-  width: 399px;
-  height: 34px;
+  width: 100%;
+  
 }
 
 .search-form__label:has(:focus-visible) {
@@ -260,6 +263,11 @@ input {
 
 .button:focus {
   outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
 }
 
 .button:active {
@@ -272,30 +280,21 @@ input {
   text-underline-offset: 3px;
 }
 
-
-.search-form__submit-button:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
-}
-
-.more-button:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
-}
-
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
-.search-form__label:hover {
+.search-form__label-text:hover {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
 
-.content__video-card:hover {
+.content__card-link:hover {
   text-decoration: underline;
+  text-decoration-thickness: 2px;
   color: #fff;
 
 }
+
 
 .content__card-link:active {
   background-color:#545050;
